# Cosmwasm-exam

./: Cargo.toml  Readme.md
.cargo/: config
src/: contract.rs  error.rs  msg.rs  multitest.rs  state.rs
src/contract/: execute.rs  instantiate.rs  query.rs
