[package]
authors = ["Mathis Gayton <mathis.gayton@gmail.com>"]
name = "bidding_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.8"
cosmwasm-storage = "1.1.8"
cosmwasm-schema = "1.1.8"
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
schemars = "0.8.11"
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
thiserror = "1.0.37"

# I need to have this dependency on my mac so that cargo wasm compiles
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cw-multi-test = "0.16.1"